crates/cockpit-project/tests/snapshots/golden_project__golden_detect_file_tree_git_project.snap
---
source: crates/cockpit-project/tests/golden_project.rs
expression: render_detection(&detection)
---
display_name: file-tree
detected:     true
strongest:    Some(Git)
signals:      [Git]
mise.detected: false
mise.config:   None
mise.tools:
mise.tasks:
mise.env:
mise.metadata: None
